--- a/BookMySHOWCopy/book.css
+++ b/BookMySHOWCopy/book.css
@@ -4,7 +4,6 @@
   padding: 0;
   overflow: hidden;
   background-color: #353839;
-  width: auto;
 }
 
 .list {
@@ -18,7 +17,6 @@
   padding: 10px 14px;
   text-decoration: none;
   margin-left: 30px;
-  width: auto;
 }
 form{
   padding: 20px 25px;
@@ -67,7 +65,6 @@ a{
   background-color: white;
   color: black;
   border: 2px solid #e7e7e7;
-  width: auto;
 }
 .info1{
   text-align: left;
@@ -106,11 +103,15 @@ a{
     overscroll-behavior-x: contain;
     padding: 0px;
     display: grid;
-    grid-template-columns: repeat(10, calc((100% - 128px) / 5));
-    grid-template-rows: repeat(1, 1fr);
     grid-auto-flow: column;
-    gap: 8px 32px;
+    gap: 10px 32px;
     overflow: scroll hidden;
     transform: initial;
-    padding-left: 50px;
+}
+
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 93%;
 }
